# poco-template

./: CMakeLists.txt  Dockerfile-alpine.dev  Dockerfile-ubuntu.dev  Dockerfile.dev  README.md  docker-compose.yml
src/: main.cpp  server.cpp  server.h
src/controllers/: main_controller.h
src/handlers/: default_handler.h
